chapter-5/manifests/reference-grant.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: ReferenceGrant
metadata:
  name: consul-reference-grant
  namespace: default
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: consul # Must match the namespace that api-gw/routes.yaml is deployed into
  to:
    - group: ""
      kind: Service
